# pilot

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build_and_run.sh  kolibri.sh  learning_data.json  learning_metrics.json  root.key  run_100_nodes.sh  run_100_nodes_realtime.sh  run_nodes.sh  task_log.txt
.github/workflows/: ci.yml  pages.yml
android/: .gitignore  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
cfg/: kolibri.jsonc
docs/: DEVELOPER_GUIDE.md  PROTOCOL.md  README.md  api_spec.md  architecture.md  demos.md  macos_app_plan.md  product_spec.md  protocol_swarm.md  readme_pro.md  roadmap.md  whitepaper.md
docs/research/: ARCHITECTURE.md  PROTOCOL.md
docs/ui/: kolibri-studio-ux.md  kolibri-universe-plan.md
include/: blockchain.h  formula.h  formula_advanced.h  formula_core.h  kolibri_ai.h
include/fkv/: fkv.h  persistence.h  replication.h
include/http/: http_routes.h  http_server.h  status_server.h
include/json-c/: json.h
include/protocol/: gossip.h  swarm.h  swarm_node.h
include/synthesis/: formula_vm_eval.h  search.h  selfplay.h
include/util/: bench.h  config.h  jwt.h  key_manager.h  log.h
include/vm/: vm.h
macos/KolibriOmegaApp/: Package.swift
macos/KolibriOmegaApp/Sources/KolibriOmegaApp/: AppEnvironment.swift  ContentView.swift  KolibriOmegaApp.swift  KolibriServices.swift  MockDataLoader.swift  Models.swift  SidebarDestination.swift  ViewModels.swift  Views.swift
macos/KolibriOmegaApp/Tests/KolibriOmegaAppTests/: KolibriOmegaAppTests.swift
rules/: base_knowledge.json
scripts/: run_server.sh
src/: abstract_mind.c  abstract_mind.h  arithmetic.c  arithmetic.h  blockchain.c  blockchain.h  brain.c  brain.h  decimal_cell.c  decimal_cell.h  embed.c  embed.h  embed_cache.c  embed_cache.h  formula.c  formula.h  formula_advanced.c  formula_advanced.h  formula_collection.c  formula_runtime.c  formula_stub.c  http_status_server.c  kolibri_ai.c  kolibri_ai.h  kolibri_ai_api.c  kolibri_ai_api.h  kolibri_decimal_cell.c  kolibri_decimal_cell.h  kolibri_globals.c  kolibri_globals.h  kolibri_knowledge.c  kolibri_knowledge.h  kolibri_learning.c  kolibri_learning.h  kolibri_log.h  kolibri_node_v1.c  kolibri_node_v1.c.new  kolibri_ping.c  kolibri_ping.h  kolibri_proto.c  (+24 more)
src/fkv/: fkv.c  persistence.c  replication.c
src/http/: http_routes.c  http_server.c
src/protocol/: gossip.c  swarm.c  swarm_node.c
src/synthesis/: formula_vm_eval.c  search.c  selfplay.c
src/util/: bench.c  config.c  json_compat.c  jwt.c  key_manager.c  log.c
src/vm/: vm.c
tests/: test_arithmetic.c  test_blockchain.c  test_blockchain_integration.c  test_blockchain_storage.c  test_blockchain_verifier.c  test_blockchain_verify.c  test_decimal_cell.c  test_formula.c  test_gossip_cluster.c  test_http_smoke.c  test_kolibri_ai_iterations.c  test_kolibri_ai_snapshot.c  test_kolibri_ai_state.c  test_kolibri_ai_top_formulas.c  test_network.c  test_rule_engine.c  test_swarm_exchange.c  test_synthesis_search.c
tests/integration/: test_fkv_cluster.c
tests/support/: formula_min.c
tests/unit/: test_blockchain.c  test_config.c  test_fkv.c  test_http_routes.c  test_swarm_protocol.c  test_vm.c
web/: app.js  index.html  package-lock.json  package.json  playwright.config.ts  styles.css  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  offline.html  service-worker.js
web/src/: App.tsx  main.css  main.ts  main.tsx  styles.css
web/src/api/: client.test.ts  client.ts
web/src/components/: AutoRefreshControl.tsx  DataTable.tsx  NotificationCenter.tsx  Skeleton.tsx  Spinner.tsx  TabNavigation.tsx  ToggleSwitch.tsx  TraceViewer.tsx
web/src/hooks/: useAutoRefresh.ts  useLiveQuery.ts  usePersistentState.ts
web/src/pwa/: registerServiceWorker.ts
web/src/styles/: index.css
web/src/views/: ChainView.tsx  ClusterView.tsx  DialogView.tsx  MemoryView.tsx  MonitoringView.tsx  ProgramsView.tsx  SchedulerView.tsx  StatusView.tsx  SynthView.tsx
web/tests/: api-client.test.ts
web/tests/e2e/: studio.spec.ts
(+15 files in other folders)
